samples/41.txt

--------------------------Compiling--------------------------
Compilation successful

-------------------Generating Class Files-------------------
Generated: Fptr.class
Generated: List.class
Main.j:131: JAS Error: Missing arguments for instruction checkcast.
		p
		 ^
Main.j: Found 1 errors

---------------------------Output---------------------------
Error: Could not find or load main class Main
Caused by: java.lang.ClassNotFoundException: Main
